# Urho3DCopy

./: .gitignore  CMakeLists.txt  README.md
Container/: Allocator.cpp  ArrayPtr.h  FlagSet.cpp  FlagSet.hpp  Hash.h  HashBase.cpp  HashBase.h  HashMap.cpp  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Pair.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.cpp  Vector.h  VectorBase.cpp  VectorBase.h
Core/: Attribute.h  Context.cpp  Context.h  CoreEvent.h  Mutex.cpp  Mutex.h  Object.cpp  Object.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h
Graphics/: ConstantBuffer.cpp  ConstantBuffer.h  Drawable.cpp  Drawable.h  GPUObject.cpp  GPUObject.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsDefs.h  GraphicsEvents.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  Octree.cpp  Octree.h  OctreeQuery.h  RenderSurface.cpp  RenderSurface.h  Shader.cpp  Shader.h  ShaderVariation.cpp  ShaderVariation.h  Technique.cpp  Technique.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  VertexBuffer.cpp  VertexBuffer.h
Graphics/Direct3D11/: D3D11Graphics.cpp  D3D11GraphicsImpl.cpp  D3D11GraphicsImpl.h  D3D11IndexBuffer.cpp  D3D11ShaderProgram.h  D3D11ShaderVariation.cpp  D3D11Texture.cpp  D3D11Texture2D.cpp  D3D11VertexBuffer.cpp
IO/: Deserializer.cpp  Deserializer.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileWatcher.h  IOEvent.h  Log.cpp  Log.h  MemoryBuffer.h  PackageFile.cpp  PackageFile.h  Serializer.cpp  Serializer.h  VectorBuffer.cpp  VectorBuffer.h
Math/: BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  MathDefs.cpp  MathDefs.h  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.hpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Rect.h  Sphere.cpp  Sphere.h  StringHash.cpp  StringHash.h  Vector2.cpp  Vector2.h  Vector3.h  Vector4.cpp  Vector4.h
Resource/: BackgroundLoader.h  Image.cpp  Image.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceEvents.h  XMLElement.cpp  XMLElement.h  XMLFile.cpp
Scene/: Animatable.cpp  Animatable.h  AnimationDefs.cpp  AnimationDefs.h  Component.cpp  Component.h  Node.cpp  Node.h  ObjectAnimation.cpp  ObjectAnimation.h  ReplicationState.h  Scene.cpp  Scene.h  SceneEvents.h  SceneResolver.cpp  Serializable.cpp  Serializable.h  ValueAnimation.cpp  ValueAnimationInfo.cpp  ValueAnimationInfo.h
Source/Container/: Allocator.h  ArrayPtr.h  Hash.h  HashBase.cpp  HashSet.cpp  LinkedList.cpp  List.h  ListBase.h  Pair.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  VectorBase.cpp
Source/Core/: Context.h  Mutex.cpp  Mutex.h  Object.h  StringUtils.cpp  Variant.cpp  WorkQueue.cpp  WorkQueue.h
Source/Engine/: EngineEvents.h
Source/Graphics/: ConstantBuffer.h  Drawable.cpp  GPUObject.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsDefs.cpp  GraphicsDefs.h  GraphicsEvents.h  GraphicsImpl.hpp  IndexBuffer.h  Material.cpp  Model.cpp  OctreeQuery.cpp  OctreeQuery.h  RenderSurface.h  Shader.cpp  Shader.h  ShaderProgram.hpp  ShaderVariation.cpp  ShaderVariation.h  Technique.cpp  Technique.h  Texture.cpp  Texture.h  Texture2D.h  Texture3D.cpp  Texture3D.h  TextureCube.cpp  TextureCube.hpp
Source/Graphics/Direct3D11/: D3D11ConstantBuffer.cpp  D3D11Graphics.cpp  D3D11IndexBuffer.cpp  D3D11RenderSurface.cpp  D3D11ShaderProgram.h  D3D11ShaderVariation.cpp  D3D11Texture2D.cpp  D3D11Texture3D.cpp
Source/Graphics/OpenGL/: OGLConstantBuffer.cpp  OGLGraphics.cpp  OGLGraphicsImpl.hpp  OGLShaderProgram.cpp  OGLShaderProgram.hpp  OGLShaderVariation.cpp
Source/IO/: AbstractFile.h  Deserializer.cpp  File.cpp  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  Log.cpp  Log.h  MemoryBuffer.cpp  PackageFile.cpp  PackageFile.h  Serializer.h  VectorBuffer.h
Source/Math/: BoundingBox.h  Matrix3.cpp  Matrix4.hpp  Plane.cpp  Quaternion.cpp  Quaternion.h  Rect.cpp  Vector3.cpp
Source/Resource/: BackgroundLoader.cpp  Image.cpp  Image.h  Resource.cpp  ResourceCache.cpp  ResourceCache.h  ResourceEvents.h  XMLElement.cpp  XMLElement.h  XMLFile.cpp  XMLFile.h
Source/Scene/: Animatable.cpp  Animatable.h  Component.cpp  Node.cpp  Node.h  ReplicationState.cpp  Scene.cpp  Scene.h  SceneEvents.cpp  SceneEvents.h  SceneResolver.cpp  SceneResolver.h  Serializable.h  UnknownComponent.cpp  UnknownComponent.h  ValueAnimation.cpp  ValueAnimation.h  ValueAnimationInfo.h
Source/UI/: Sprite.hpp  UI.cpp  UIBatch.cpp  UIBatch.hpp  UIElement.cpp  UIEvents.hpp
UI/: Sprite.cpp  UI.cpp  UI.hpp  UIBatch.cpp  UIElement.cpp  UIElement.hpp
